[gd_scene load_steps=49 format=3 uid="uid://5yhm2te35gar"]

[ext_resource type="Script" uid="uid://dy3ttxark73hp" path="res://Scripts/PlayerCharacter/player_character.gd" id="1_b0oxt"]
[ext_resource type="Script" uid="uid://dwt1c1uuwpojl" path="res://Scripts/StateMachine/state_machine.gd" id="2_q8eto"]
[ext_resource type="Script" uid="uid://cw43v85w18en2" path="res://Scripts/PlayerCharacter/PlayerStates/CraneStates/c_idle_state.gd" id="3_t8il2"]
[ext_resource type="Script" uid="uid://ov6gk5cwd4qn" path="res://Scripts/PlayerCharacter/PlayerStates/CraneStates/c_move_state.gd" id="4_5rqbl"]
[ext_resource type="Script" uid="uid://bttis1dmq58ba" path="res://Scripts/PlayerCharacter/PlayerStates/CraneStates/c_fall_state.gd" id="5_am6yf"]
[ext_resource type="Script" uid="uid://bjbv054llvtl7" path="res://Scripts/PlayerCharacter/PlayerStates/CraneStates/c_jump_state.gd" id="6_aqqdf"]
[ext_resource type="AudioStream" uid="uid://c8k8wkcrhrgb0" path="res://Resources/Audio/StreamResources/water_splash_rando.tres" id="6_od8hc"]
[ext_resource type="Script" uid="uid://dx6msnqd0gbph" path="res://Scripts/PlayerCharacter/PlayerStates/CraneStates/c_float_state.gd" id="7_dv8fq"]
[ext_resource type="Script" uid="uid://dxu5i7k63fexh" path="res://Scripts/PlayerCharacter/PlayerStates/HumanStates/h_idle_state.gd" id="8_do06u"]
[ext_resource type="Script" uid="uid://cqp110ynvb57c" path="res://Scripts/PlayerCharacter/PlayerStates/HumanStates/h_move_state.gd" id="9_d61ru"]
[ext_resource type="Script" uid="uid://bm8xros2lxqyb" path="res://Scripts/PlayerCharacter/PlayerStates/HumanStates/h_fall_state.gd" id="10_fg5c0"]
[ext_resource type="Script" uid="uid://bigmsywst72lt" path="res://Scripts/PlayerCharacter/PlayerStates/HumanStates/h_jump_state.gd" id="11_hhkxd"]
[ext_resource type="Script" uid="uid://b2rasl7786bte" path="res://Scripts/PlayerCharacter/PlayerStates/HumanStates/h_double_jump_state.gd" id="12_c5es3"]
[ext_resource type="Script" uid="uid://b52fc06idc0g3" path="res://Scripts/PlayerCharacter/cam_controller.gd" id="14_5rqbl"]
[ext_resource type="PackedScene" uid="uid://cxen583cq5xc7" path="res://Resources/Models/Boat/test_boat.blend" id="14_c5es3"]
[ext_resource type="Script" uid="uid://bc1mtas6lu430" path="res://Scripts/PlayerCharacter/PlayerStates/BoatStates/b_idle_state.gd" id="14_wigkn"]
[ext_resource type="Script" uid="uid://brfkur3tjgc25" path="res://Scripts/PlayerCharacter/PlayerStates/BoatStates/b_move_state.gd" id="15_5tp3p"]
[ext_resource type="Script" uid="uid://biwnkep5j3bge" path="res://Scripts/PlayerCharacter/PlayerStates/BoatStates/b_fall_state.gd" id="15_wigkn"]
[ext_resource type="AudioStream" uid="uid://bskiv05tovnk3" path="res://Resources/Audio/StreamResources/footstep_rando.tres" id="18_c5es3"]
[ext_resource type="PackedScene" uid="uid://csncbx40h3vj5" path="res://Resources/Models/Human/human.glb" id="18_wigkn"]
[ext_resource type="PackedScene" uid="uid://ci4csqbyu2n7u" path="res://Resources/Models/Crane/crane.glb" id="19_wigkn"]
[ext_resource type="AudioStream" uid="uid://ddwkxfry8ogmg" path="res://Resources/Audio/SoundEffects/vfx_boat.mp3" id="23_p156y"]
[ext_resource type="AudioStream" uid="uid://ccu7t8bfb56ju" path="res://Resources/Audio/SoundEffects/PlayerCharacter/Crane/vfx_flap_01.wav" id="25_umdb5"]
[ext_resource type="AudioStream" uid="uid://cb00qiwehaobl" path="res://Resources/Audio/SoundEffects/PlayerCharacter/Crane/vfx_flap_02.wav" id="26_penjb"]
[ext_resource type="AudioStream" uid="uid://drylqu2im3wvy" path="res://Resources/Audio/SoundEffects/PlayerCharacter/Crane/vfx_flap_03.wav" id="27_fmay1"]

[sub_resource type="Curve" id="Curve_p156y"]
_data = [Vector2(0, 0.314607), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.33483, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_od8hc"]
_data = [Vector2(0, 0.449438), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.12219, 0.0, 0, 0]
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1k180"]
streams_count = 3
stream_0/stream = ExtResource("25_umdb5")
stream_1/stream = ExtResource("26_penjb")
stream_2/stream = ExtResource("27_fmay1")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p156y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t8il2"]
radius = 0.558657
height = 1.8462

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_od8hc"]
radius = 0.881837
height = 4.0

[sub_resource type="AnimationNodeBlend3" id="AnimationNodeBlend3_wigkn"]

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_5tp3p"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ki3jj"]
animation = &"Folding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_umdb5"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_penjb"]
animation = &"Jumping"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_fmay1"]

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_1k180"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e3lai"]
animation = &"walking"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_fmay1"]
graph_offset = Vector2(-365.346, -0.791626)
nodes/Blend_IWJ/node = SubResource("AnimationNodeBlend3_wigkn")
nodes/Blend_IWJ/position = Vector2(120, 160)
nodes/Blend_to_fold/node = SubResource("AnimationNodeAdd2_5tp3p")
nodes/Blend_to_fold/position = Vector2(420, 140)
nodes/Folding/node = SubResource("AnimationNodeAnimation_ki3jj")
nodes/Folding/position = Vector2(260, 420)
nodes/Idle/node = SubResource("AnimationNodeAnimation_umdb5")
nodes/Idle/position = Vector2(-100, 60)
nodes/Jumping/node = SubResource("AnimationNodeAnimation_penjb")
nodes/Jumping/position = Vector2(-100, 420)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_fmay1")
nodes/TimeScale/position = Vector2(880, 120)
nodes/TimeSeek/node = SubResource("AnimationNodeTimeSeek_1k180")
nodes/TimeSeek/position = Vector2(660, 100)
nodes/Walking/node = SubResource("AnimationNodeAnimation_e3lai")
nodes/Walking/position = Vector2(-100, 240)
nodes/output/position = Vector2(1120, 160)
node_connections = [&"Blend_IWJ", 0, &"Idle", &"Blend_IWJ", 1, &"Walking", &"Blend_IWJ", 2, &"Jumping", &"Blend_to_fold", 0, &"Blend_IWJ", &"Blend_to_fold", 1, &"Folding", &"TimeScale", 0, &"TimeSeek", &"TimeSeek", 0, &"Blend_to_fold", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_wigkn"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_5tp3p"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_ki3jj"]

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_umdb5"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fmay1"]
animation = &"flying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1k180"]
animation = &"Folding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wigkn"]
animation = &"walking"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_wigkn"]
graph_offset = Vector2(-482.555, 34.4221)
nodes/Blend_to_fold/node = SubResource("AnimationNodeBlend2_wigkn")
nodes/Blend_to_fold/position = Vector2(120, 200)
nodes/Blend_wf/node = SubResource("AnimationNodeBlend2_5tp3p")
nodes/Blend_wf/position = Vector2(-191.99, 201.256)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_ki3jj")
nodes/TimeScale/position = Vector2(500, 200)
nodes/TimeSeek/node = SubResource("AnimationNodeTimeSeek_umdb5")
nodes/TimeSeek/position = Vector2(320, 200)
nodes/flying/node = SubResource("AnimationNodeAnimation_fmay1")
nodes/flying/position = Vector2(-500, 300)
nodes/folding/node = SubResource("AnimationNodeAnimation_1k180")
nodes/folding/position = Vector2(-80, 480)
nodes/output/position = Vector2(760, 180)
nodes/walking/node = SubResource("AnimationNodeAnimation_wigkn")
nodes/walking/position = Vector2(-500, 120)
node_connections = [&"Blend_to_fold", 0, &"Blend_wf", &"Blend_to_fold", 1, &"folding", &"Blend_wf", 0, &"walking", &"Blend_wf", 1, &"flying", &"TimeScale", 0, &"TimeSeek", &"TimeSeek", 0, &"Blend_to_fold", &"output", 0, &"TimeScale"]

[node name="CombinedPlayerCharacter" type="CharacterBody3D" groups=["PlayerCharacter"]]
collision_layer = 2
script = ExtResource("1_b0oxt")
char_arr = [[NodePath("StateMachines/Human"), NodePath("VisualAppearances/human"), NodePath("HumanCollision")], [NodePath("StateMachines/Crane"), NodePath("VisualAppearances/crane"), NodePath("CraneCollision")], [NodePath("StateMachines/Boat"), NodePath("VisualAppearances/test_boat"), NodePath("BoatCollision")]]
metadata/_custom_type_script = "uid://dy3ttxark73hp"

[node name="StateMachines" type="Node" parent="."]

[node name="Human" type="Node" parent="StateMachines" node_paths=PackedStringArray("starting_state")]
unique_name_in_owner = true
script = ExtResource("2_q8eto")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachines/Human" node_paths=PackedStringArray("fall_state", "jump_state", "move_state")]
script = ExtResource("8_do06u")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
move_state = NodePath("../MoveState")
metadata/_custom_type_script = "uid://dtxg4pq018gks"

[node name="MoveState" type="Node" parent="StateMachines/Human" node_paths=PackedStringArray("idle_state", "jump_state", "fall_state")]
script = ExtResource("9_d61ru")
idle_state = NodePath("../IdleState")
jump_state = NodePath("../JumpState")
fall_state = NodePath("../FallState")
acceleration_curve = SubResource("Curve_p156y")
footsteps_audiosource = ExtResource("18_c5es3")
watersplash_audiosource = ExtResource("6_od8hc")

[node name="FallState" type="Node" parent="StateMachines/Human" node_paths=PackedStringArray("idle_state", "move_state", "double_jump_state")]
script = ExtResource("10_fg5c0")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
double_jump_state = NodePath("../DoubleJumpState")

[node name="JumpState" type="Node" parent="StateMachines/Human" node_paths=PackedStringArray("fall_state")]
script = ExtResource("11_hhkxd")
fall_state = NodePath("../FallState")

[node name="DoubleJumpState" type="Node" parent="StateMachines/Human" node_paths=PackedStringArray("fall_state")]
script = ExtResource("12_c5es3")
fall_state = NodePath("../FallState")

[node name="Crane" type="Node" parent="StateMachines" node_paths=PackedStringArray("starting_state")]
unique_name_in_owner = true
script = ExtResource("2_q8eto")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachines/Crane" node_paths=PackedStringArray("float_state", "jump_state", "move_state")]
script = ExtResource("3_t8il2")
float_state = NodePath("../FloatState")
jump_state = NodePath("../JumpState")
move_state = NodePath("../MoveState")
metadata/_custom_type_script = "uid://dtxg4pq018gks"

[node name="MoveState" type="Node" parent="StateMachines/Crane" node_paths=PackedStringArray("idle_state", "jump_state", "float_state")]
script = ExtResource("4_5rqbl")
idle_state = NodePath("../IdleState")
jump_state = NodePath("../JumpState")
float_state = NodePath("../FloatState")
acceleration_curve = SubResource("Curve_od8hc")

[node name="FallState" type="Node" parent="StateMachines/Crane" node_paths=PackedStringArray("idle_state", "move_state", "float_state")]
script = ExtResource("5_am6yf")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
float_state = NodePath("../FloatState")

[node name="JumpState" type="Node" parent="StateMachines/Crane" node_paths=PackedStringArray("float_state")]
script = ExtResource("6_aqqdf")
float_state = NodePath("../FloatState")

[node name="FloatState" type="Node" parent="StateMachines/Crane" node_paths=PackedStringArray("fall_state", "idle_state")]
script = ExtResource("7_dv8fq")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")

[node name="Boat" type="Node" parent="StateMachines" node_paths=PackedStringArray("starting_state")]
unique_name_in_owner = true
script = ExtResource("2_q8eto")
starting_state = NodePath("MoveState")

[node name="IdleState" type="Node" parent="StateMachines/Boat" node_paths=PackedStringArray("fall_state", "move_state")]
script = ExtResource("14_wigkn")
fall_state = NodePath("../FallState")
move_state = NodePath("../MoveState")
metadata/_custom_type_script = "uid://dtxg4pq018gks"

[node name="MoveState" type="Node" parent="StateMachines/Boat" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("15_5tp3p")
idle_state = NodePath("../IdleState")
fall_state = NodePath("../FallState")

[node name="FallState" type="Node" parent="StateMachines/Boat" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("15_wigkn")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")

[node name="VisualAppearances" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="human" parent="VisualAppearances" instance=ExtResource("18_wigkn")]
transform = Transform3D(1.965, 0, 0, 0, 1.965, 0, 0, 0, 1.965, 0, -0.324425, 0)

[node name="Skeleton3D" parent="VisualAppearances/human/Armature" index="0"]
bones/0/position = Vector3(2.64698e-23, 0.260137, 0.036929)
bones/0/rotation = Quaternion(0.0595455, 1.18998e-07, 7.09837e-09, 0.998226)
bones/2/rotation = Quaternion(-0.12813, -0.00341353, -0.185475, 0.974254)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.02362, -9.81178e-05, -0.788281, 0.614862)
bones/4/rotation = Quaternion(0.0867292, 0.0783959, -0.260254, 0.958436)
bones/5/rotation = Quaternion(-0.121566, -0.0219968, 0.26249, 0.956994)
bones/6/rotation = Quaternion(0.0236198, 9.79727e-05, 0.788281, 0.614862)
bones/7/rotation = Quaternion(0.137209, 0.0257485, 0.306538, 0.941565)
bones/8/rotation = Quaternion(-0.121566, 0.0219968, -0.26249, 0.956994)
bones/9/rotation = Quaternion(0.557907, 0.434442, 0.557907, -0.434442)
bones/10/rotation = Quaternion(-0.482134, 5.15455e-08, 6.47859e-08, 0.876097)
bones/11/rotation = Quaternion(0.501249, 2.11093e-08, -5.89185e-08, 0.865303)
bones/12/rotation = Quaternion(0.557907, -0.434442, -0.557907, -0.434442)
bones/13/rotation = Quaternion(-0.482134, -5.15455e-08, -6.47859e-08, 0.876097)
bones/14/rotation = Quaternion(0.501249, -2.11093e-08, 5.89185e-08, 0.865303)

[node name="AnimationPlayer" parent="VisualAppearances/human" index="1"]
autoplay = "idle"

[node name="crane" parent="VisualAppearances" instance=ExtResource("19_wigkn")]
transform = Transform3D(-2.62268e-08, 0, -0.6, 0, 0.6, 0, 0.6, 0, -2.62268e-08, 0, 0, 0)
visible = false

[node name="Skeleton3D" parent="VisualAppearances/crane/Armature" index="0"]
bones/0/position = Vector3(0.0758366, 0.475635, 0.176494)
bones/0/rotation = Quaternion(0.0895713, -0.712803, -0.0415559, 0.694378)
bones/1/position = Vector3(0.0117238, 0.0410071, 0.434311)
bones/1/rotation = Quaternion(0.177126, 0.693093, 0.219418, 0.663404)
bones/2/rotation = Quaternion(0.0308786, 0.0137554, 0.0263042, 0.999082)
bones/3/rotation = Quaternion(-0.0422133, 0.0178803, 0.0394311, 0.99817)
bones/4/rotation = Quaternion(0.029362, -0.00923784, 0.0261839, 0.999183)
bones/5/position = Vector3(-0.0360225, -0.0268451, -0.390743)
bones/5/rotation = Quaternion(-0.26987, -0.00543886, 0.000660738, 0.962881)
bones/6/rotation = Quaternion(-0.0221828, -0.00706792, -0.0212076, 0.999504)
bones/7/rotation = Quaternion(-0.661113, -0.113935, 0.0519295, 0.739765)
bones/8/rotation = Quaternion(0.512508, 0.521367, 0.493739, -0.470887)
bones/9/rotation = Quaternion(-0.0351205, 0.00244308, -0.00611022, 0.999361)
bones/10/rotation = Quaternion(0.551167, -0.479485, -0.54258, -0.414626)
bones/11/rotation = Quaternion(-0.00265411, -0.0135185, 0.0289445, 0.999486)

[node name="test_boat" parent="VisualAppearances" instance=ExtResource("14_c5es3")]
unique_name_in_owner = true
transform = Transform3D(-1.09278e-08, 0, 0.25, 0, 0.25, 0, -0.25, 0, -1.09278e-08, 0, 0, 0)
visible = false

[node name="AudioStreams" type="Node3D" parent="."]

[node name="ASP_Footsteps" type="AudioStreamPlayer3D" parent="AudioStreams"]
unique_name_in_owner = true
stream = ExtResource("18_c5es3")
bus = &"Sound Effects"

[node name="ASP_Wingflaps" type="AudioStreamPlayer3D" parent="AudioStreams"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_1k180")
bus = &"Sound Effects"

[node name="ASP_BoatSounds" type="AudioStreamPlayer3D" parent="AudioStreams"]
unique_name_in_owner = true
stream = ExtResource("23_p156y")
attenuation_model = 3
volume_db = 80.0
max_db = 6.0
bus = &"Sound Effects"

[node name="HumanCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.655237, 0)
shape = SubResource("CapsuleShape3D_p156y")

[node name="CraneCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.219868, -0.0729984)
shape = SubResource("CapsuleShape3D_t8il2")
disabled = true

[node name="BoatCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.526333, -0.0621405)
shape = SubResource("CapsuleShape3D_od8hc")
disabled = true

[node name="CameraPivot" type="Marker3D" parent="."]
unique_name_in_owner = true

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
spring_length = 5.0
margin = 0.25

[node name="PlayerCam" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
script = ExtResource("14_5rqbl")

[node name="AnimationTrees" type="Node" parent="."]

[node name="AT_Human" type="AnimationTree" parent="AnimationTrees"]
unique_name_in_owner = true
root_node = NodePath("%VisualAppearances/human")
tree_root = SubResource("AnimationNodeBlendTree_fmay1")
anim_player = NodePath("../../VisualAppearances/human/AnimationPlayer")
parameters/Blend_IWJ/blend_amount = -1.0
parameters/Blend_to_fold/add_amount = 0.0
parameters/TimeScale/scale = 1.0
parameters/TimeSeek/seek_request = -1.0

[node name="AT_Crane" type="AnimationTree" parent="AnimationTrees"]
unique_name_in_owner = true
root_node = NodePath("%VisualAppearances/crane")
tree_root = SubResource("AnimationNodeBlendTree_wigkn")
anim_player = NodePath("../../VisualAppearances/crane/AnimationPlayer")
parameters/Blend_to_fold/blend_amount = 0
parameters/Blend_wf/blend_amount = 0.0
parameters/TimeScale/scale = 1.0
parameters/TimeSeek/seek_request = -1.0

[editable path="VisualAppearances/human"]
[editable path="VisualAppearances/crane"]
